--- a/Stripped View/StrippedView.xib
+++ b/Stripped View/StrippedView.xib
@@ -10,11 +10,11 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="StrippedView" customModule="Stripped_View" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="pCD-qY-LcQ">
-            <rect key="frame" x="0.0" y="0.0" width="379" height="457"/>
+            <rect key="frame" x="0.0" y="0.0" width="367" height="457"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="09Y-tv-HIR">
-                    <rect key="frame" x="127" y="83" width="125" height="40"/>
+                    <rect key="frame" x="123" y="83" width="121" height="40"/>
                     <color key="backgroundColor" systemColor="systemBrownColor" red="0.63529411759999999" green="0.51764705879999995" blue="0.36862745099999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <fontDescription key="fontDescription" type="system" pointSize="23"/>
                     <state key="normal" title="Button">
@@ -22,7 +22,7 @@
                     </state>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MmS-jc-2cC">
-                    <rect key="frame" x="73.5" y="214" width="232" height="112"/>
+                    <rect key="frame" x="71" y="214" width="225" height="112"/>
                     <color key="backgroundColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="256" id="OyV-zm-mg3"/>
@@ -42,7 +42,7 @@
             <nil key="simulatedTopBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="fEF-sA-AEy"/>
-            <point key="canvasLocation" x="575" y="-612"/>
+            <point key="canvasLocation" x="565.94202898550725" y="-612.38839285714278"/>
         </view>
     </objects>
 </document>
